# cookie-clicker-strategy-lab

./: .gitignore  CLAUDE.md  COOKIE_CLICKER.md  README.md  engine.py  main.py  pyproject.toml  simulation.py  strategies.py  visual.md  visualize.py
analysis/: compare.py  runner.py  visualize.py
game/: config.py  engine.py  models.py
strategies/: base.py  cheapest.py  greedy_roi.py  hybrid.py  llm_planner.py
